--- a/projects-aluminum-glass.html
+++ b/projects-aluminum-glass.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>مشاريعنا | كيان الخليج</title>
+    <title>مشاريع المنيوم وزجاج | كيان الخليج</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg" type="image/jpeg">
     <link rel="stylesheet" href="style.css">
@@ -49,81 +49,64 @@
     <section class="hero-section projects-hero">
         <div class="container">
             <div class="hero-content" data-aos="fade-up">
-                <h1 class="hero-title" style="color: #000;">مشاريعنا المميزة</h1>
-                <p class="hero-subtitle" style="color: #000;">اكتشف مجموعة متنوعة من مشاريعنا في مختلف المجالات الصناعية والإنشائية</p>
+                <h1 class="hero-title">مشاريع المنيوم وزجاج</h1>
+                <p class="hero-subtitle">اكتشف مجموعة متنوعة من مشاريعنا المميزة في مجال الألمنيوم والزجاج</p>
             </div>
         </div>
     </section>
 
-    <section class="projects-categories">
+    <section class="products-section">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-up">فئات مشاريعنا</h2>
-            <div class="projects-grid">
-                <div class="project-card" data-aos="fade-up" onclick="window.location.href='projects-aluminum-glass.html'">
-                    <div class="project-card-image">
-                        <img src="Screenshot 2025-07-20 213507_1753036896128.png" alt="المنيوم وزجاج">
-                        <div class="project-card-overlay">
-                            <i class="fa-solid fa-arrow-left"></i>
-                        </div>
-                    </div>
-                    <div class="project-card-content">
-                        <h3><i class="fa-solid fa-building"></i> المنيوم وزجاج</h3>
-                        <p>مشاريعنا المميزة في مجال الألمنيوم والزجاج، تشمل واجهات المباني والمنشآت التجارية والسكنية</p>
-                        <div class="project-stats">
-                            <span><i class="fa-solid fa-project-diagram"></i> 50+ مشروع</span>
-                            <span><i class="fa-solid fa-star"></i> 4.9/5 تقييم</span>
-                        </div>
-                    </div>
+            <h1 class="section-title" style="margin-bottom:2rem;">مميزات مشاريع المنيوم والزجاج</h1>
+            <div class="products-grid">
+                <div class="product-card" data-aos="fade-up">
+                    <h3><i class="fa-solid fa-shield-halved"></i> المتانة والقوة</h3>
+                    <p>الألمنيوم معدن قوي وخفيف الوزن، مما يجعله مثاليًا للاستخدام في واجهات المباني والمنشآت. يتميز بمقاومة عالية للتآكل والعوامل الجوية.</p>
                 </div>
-
-                <div class="project-card" data-aos="fade-up" data-aos-delay="100" onclick="window.location.href='projects-cladding.html'">
-                    <div class="project-card-image">
-                        <img src="Screenshot 2025-07-20 213323_1753036903981.png" alt="كلادينج">
-                        <div class="project-card-overlay">
-                            <i class="fa-solid fa-arrow-left"></i>
-                        </div>
-                    </div>
-                    <div class="project-card-content">
-                        <h3><i class="fa-solid fa-layer-group"></i> كلادينج</h3>
-                        <p>تصاميم مبتكرة وأنظمة كلادينج متطورة للمباني الحديثة والمنشآت المعمارية المميزة</p>
-                        <div class="project-stats">
-                            <span><i class="fa-solid fa-project-diagram"></i> 35+ مشروع</span>
-                            <span><i class="fa-solid fa-star"></i> 4.8/5 تقييم</span>
-                        </div>
-                    </div>
+                <div class="product-card" data-aos="fade-up" data-aos-delay="100">
+                    <h3><i class="fa-solid fa-eye"></i> الشفافية والجمالية</h3>
+                    <p>الزجاج يوفر شفافية عالية تسمح بدخول الضوء الطبيعي، مما يخلق بيئة مريحة وجذابة بصريًا. يمكن استخدام أنواع مختلفة من الزجاج حسب الحاجة.</p>
                 </div>
-
-                <div class="project-card" data-aos="fade-up" data-aos-delay="200" onclick="window.location.href='projects-wpc-doors.html'">
-                    <div class="project-card-image">
-                        <img src="Screenshot 2025-07-20 213351_1753036896131.png" alt="أبواب WPC">
-                        <div class="project-card-overlay">
-                            <i class="fa-solid fa-arrow-left"></i>
-                        </div>
-                    </div>
-                    <div class="project-card-content">
-                        <h3><i class="fa-solid fa-door-open"></i> أبواب WPC</h3>
-                        <p>أبواب WPC عالية الجودة مقاومة للماء والحشرات، مثالية للمنازل والمكاتب والمنشآت التجارية</p>
-                        <div class="project-stats">
-                            <span><i class="fa-solid fa-project-diagram"></i> 80+ مشروع</span>
-                            <span><i class="fa-solid fa-star"></i> 4.9/5 تقييم</span>
-                        </div>
-                    </div>
+                <div class="product-card" data-aos="fade-up" data-aos-delay="200">
+                    <h3><i class="fa-solid fa-leaf"></i> صديق للبيئة</h3>
+                    <p>الألمنيوم قابل لإعادة التدوير بنسبة 100%، مما يجعله خيارًا صديقًا للبيئة. كما أن الزجاج قابل لإعادة التدوير أيضًا.</p>
                 </div>
-
-                <div class="project-card" data-aos="fade-up" data-aos-delay="300" onclick="window.location.href='projects-upvc-windows.html'">
-                    <div class="project-card-image">
-                        <img src="Screenshot 2025-07-20 213337_1753036605405.png" alt="نوافذ وأبواب UPVC">
-                        <div class="project-card-overlay">
-                            <i class="fa-solid fa-arrow-left"></i>
-                        </div>
+                <div class="product-card" data-aos="fade-up" data-aos-delay="300">
+                    <h3><i class="fa-solid fa-palette"></i> التصميم المرن</h3>
+                    <p>يمكن تشكيل الألمنيوم والزجاج بأشكال وأحجام مختلفة، مما يوفر مرونة في التصميم وتناسب مع مختلف الأنماط المعمارية.</p>
+                </div>
+                <div class="product-card" data-aos="fade-up" data-aos-delay="400">
+                    <h3><i class="fa-solid fa-snowflake"></i> العزل الحراري</h3>
+                    <p>يمكن استخدام زجاج مزدوج أو ثلاثي الطبقات مع إطارات ألمنيوم محسنة لتوفير عزل حراري ممتاز وتوفير الطاقة.</p>
+                </div>
+                <div class="product-card" data-aos="fade-up" data-aos-delay="500">
+                    <h3><i class="fa-solid fa-volume-mute"></i> العزل الصوتي</h3>
+                    <p>أنظمة الألمنيوم والزجاج الحديثة توفر عزل صوتي ممتاز، مما يجعلها مثالية للمباني في المناطق الصاخبة.</p>
+                </div>
+            </div>
+            <div style="margin:3rem 0 2rem;">
+                <h2 class="section-title" style="font-size:1.3rem;margin-bottom:1.5rem;">مجالات التطبيق</h2>
+                <div class="quick-links" style="justify-content:flex-start;">
+                    <span class="quick-link"><i class="fa-solid fa-building"></i> واجهات المباني التجارية</span>
+                    <span class="quick-link"><i class="fa-solid fa-home"></i> النوافذ والأبواب السكنية</span>
+                    <span class="quick-link"><i class="fa-solid fa-hotel"></i> الفنادق والمنتجعات</span>
+                    <span class="quick-link"><i class="fa-solid fa-store"></i> المراكز التجارية</span>
+                </div>
+            </div>
+            <div class="doors-gallery" style="margin-top:3rem;">
+                <h2 class="section-title" style="font-size:1.3rem;margin-bottom:2rem;">نماذج من مشاريعنا</h2>
+                <div class="products-grid">
+                    <div class="product-card" data-aos="fade-up">
+                        <img src="sasa6.jpg" alt="واجهة زجاجية" style="height:320px;object-fit:cover;">
+                        <h3>واجهة زجاجية حديثة</h3>
                     </div>
-                    <div class="project-card-content">
-                        <h3><i class="fa-solid fa-window-maximize"></i> نوافذ وأبواب UPVC</h3>
-                        <p>أنظمة نوافذ وأبواب UPVC عازلة للحرارة والصوت، توفير الطاقة وحماية البيئة</p>
-                        <div class="project-stats">
-                            <span><i class="fa-solid fa-project-diagram"></i> 60+ مشروع</span>
-                            <span><i class="fa-solid fa-star"></i> 4.7/5 تقييم</span>
-                        </div>
+                    <div class="product-card" data-aos="fade-up" data-aos-delay="100">
+                        <img src="smart-aluminium-windows-1024x683-1-1000x570.png" alt="نوافذ ألمنيوم" style="height:320px;object-fit:cover;">
+                        <h3>نوافذ ألمنيوم عازلة</h3>
+                    </div>
+                    <div class="product-card" data-aos="fade-up" data-aos-delay="200">
+                        <img src="9919016-1171360793.jpg" alt="باب زجاجي" style="height:320px;object-fit:cover;">
+                        <h3>أبواب زجاجية انزلاقية</h3>
                     </div>
                 </div>
             </div>
@@ -134,24 +117,24 @@
         <div class="container">
             <div class="stats-grid">
                 <div class="stat-item" data-aos="fade-up">
-                    <div class="stat-icon"><i class="fa-solid fa-project-diagram"></i></div>
-                    <div class="stat-number">225+</div>
-                    <div class="stat-label">مشروع مكتمل</div>
+                    <div class="stat-icon"><i class="fa-solid fa-building"></i></div>
+                    <div class="stat-number">50+</div>
+                    <div class="stat-label">مشروع منيوم وزجاج</div>
                 </div>
                 <div class="stat-item" data-aos="fade-up" data-aos-delay="100">
                     <div class="stat-icon"><i class="fa-solid fa-users"></i></div>
-                    <div class="stat-number">150+</div>
+                    <div class="stat-number">80+</div>
                     <div class="stat-label">عميل راضي</div>
                 </div>
                 <div class="stat-item" data-aos="fade-up" data-aos-delay="200">
-                    <div class="stat-icon"><i class="fa-solid fa-calendar-check"></i></div>
-                    <div class="stat-number">10+</div>
-                    <div class="stat-label">سنوات خبرة</div>
+                    <div class="stat-icon"><i class="fa-solid fa-star"></i></div>
+                    <div class="stat-number">4.9</div>
+                    <div class="stat-label">تقييم متوسط</div>
                 </div>
                 <div class="stat-item" data-aos="fade-up" data-aos-delay="300">
-                    <div class="stat-icon"><i class="fa-solid fa-star"></i></div>
-                    <div class="stat-number">4.8</div>
-                    <div class="stat-label">تقييم متوسط</div>
+                    <div class="stat-icon"><i class="fa-solid fa-calendar-check"></i></div>
+                    <div class="stat-number">8+</div>
+                    <div class="stat-label">سنوات خبرة</div>
                 </div>
             </div>
         </div>
@@ -206,4 +189,4 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
