--- a/projects-cladding.html
+++ b/projects-cladding.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>مشاريعنا | كيان الخليج</title>
+    <title>مشاريع الكلادينج | كيان الخليج</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg" type="image/jpeg">
     <link rel="stylesheet" href="style.css">
@@ -49,81 +49,64 @@
     <section class="hero-section projects-hero">
         <div class="container">
             <div class="hero-content" data-aos="fade-up">
-                <h1 class="hero-title" style="color: #000;">مشاريعنا المميزة</h1>
-                <p class="hero-subtitle" style="color: #000;">اكتشف مجموعة متنوعة من مشاريعنا في مختلف المجالات الصناعية والإنشائية</p>
+                <h1 class="hero-title" style="color:#111;">مشاريع الكلادينج</h1>
+                <p class="hero-subtitle" style="color:#111;">اكتشف مجموعة متنوعة من مشاريعنا المميزة في مجال الكلادينج والواجهات الخارجية</p>
             </div>
         </div>
     </section>
 
-    <section class="projects-categories">
+    <section class="products-section">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-up">فئات مشاريعنا</h2>
-            <div class="projects-grid">
-                <div class="project-card" data-aos="fade-up" onclick="window.location.href='projects-aluminum-glass.html'">
-                    <div class="project-card-image">
-                        <img src="Screenshot 2025-07-20 213507_1753036896128.png" alt="المنيوم وزجاج">
-                        <div class="project-card-overlay">
-                            <i class="fa-solid fa-arrow-left"></i>
-                        </div>
-                    </div>
-                    <div class="project-card-content">
-                        <h3><i class="fa-solid fa-building"></i> المنيوم وزجاج</h3>
-                        <p>مشاريعنا المميزة في مجال الألمنيوم والزجاج، تشمل واجهات المباني والمنشآت التجارية والسكنية</p>
-                        <div class="project-stats">
-                            <span><i class="fa-solid fa-project-diagram"></i> 50+ مشروع</span>
-                            <span><i class="fa-solid fa-star"></i> 4.9/5 تقييم</span>
-                        </div>
-                    </div>
+            <h1 class="section-title" style="margin-bottom:2rem;">مميزات مشاريع الكلادينج</h1>
+            <div class="products-grid">
+                <div class="product-card" data-aos="fade-up">
+                    <h3><i class="fa-solid fa-shield-halved"></i> الحماية والعزل</h3>
+                    <p>أنظمة الكلادينج توفر حماية ممتازة للمباني من العوامل الجوية المختلفة، كما أنها توفر عزل حراري وصوتي عالي الجودة.</p>
                 </div>
-
-                <div class="project-card" data-aos="fade-up" data-aos-delay="100" onclick="window.location.href='projects-cladding.html'">
-                    <div class="project-card-image">
-                        <img src="Screenshot 2025-07-20 213323_1753036903981.png" alt="كلادينج">
-                        <div class="project-card-overlay">
-                            <i class="fa-solid fa-arrow-left"></i>
-                        </div>
-                    </div>
-                    <div class="project-card-content">
-                        <h3><i class="fa-solid fa-layer-group"></i> كلادينج</h3>
-                        <p>تصاميم مبتكرة وأنظمة كلادينج متطورة للمباني الحديثة والمنشآت المعمارية المميزة</p>
-                        <div class="project-stats">
-                            <span><i class="fa-solid fa-project-diagram"></i> 35+ مشروع</span>
-                            <span><i class="fa-solid fa-star"></i> 4.8/5 تقييم</span>
-                        </div>
-                    </div>
+                <div class="product-card" data-aos="fade-up" data-aos-delay="100">
+                    <h3><i class="fa-solid fa-palette"></i> التصميم الجمالي</h3>
+                    <p>يمكن تطبيق الكلادينج بأشكال وألوان مختلفة، مما يوفر مرونة في التصميم ويضيف قيمة جمالية للمباني.</p>
                 </div>
-
-                <div class="project-card" data-aos="fade-up" data-aos-delay="200" onclick="window.location.href='projects-wpc-doors.html'">
-                    <div class="project-card-image">
-                        <img src="Screenshot 2025-07-20 213351_1753036896131.png" alt="أبواب WPC">
-                        <div class="project-card-overlay">
-                            <i class="fa-solid fa-arrow-left"></i>
-                        </div>
-                    </div>
-                    <div class="project-card-content">
-                        <h3><i class="fa-solid fa-door-open"></i> أبواب WPC</h3>
-                        <p>أبواب WPC عالية الجودة مقاومة للماء والحشرات، مثالية للمنازل والمكاتب والمنشآت التجارية</p>
-                        <div class="project-stats">
-                            <span><i class="fa-solid fa-project-diagram"></i> 80+ مشروع</span>
-                            <span><i class="fa-solid fa-star"></i> 4.9/5 تقييم</span>
-                        </div>
-                    </div>
+                <div class="product-card" data-aos="fade-up" data-aos-delay="200">
+                    <h3><i class="fa-solid fa-leaf"></i> صديق للبيئة</h3>
+                    <p>أنظمة الكلادينج الحديثة مصممة لتوفير الطاقة وتقليل الانبعاثات الكربونية، مما يجعلها خيارًا صديقًا للبيئة.</p>
                 </div>
-
-                <div class="project-card" data-aos="fade-up" data-aos-delay="300" onclick="window.location.href='projects-upvc-windows.html'">
-                    <div class="project-card-image">
-                        <img src="Screenshot 2025-07-20 213337_1753036605405.png" alt="نوافذ وأبواب UPVC">
-                        <div class="project-card-overlay">
-                            <i class="fa-solid fa-arrow-left"></i>
-                        </div>
+                <div class="product-card" data-aos="fade-up" data-aos-delay="300">
+                    <h3><i class="fa-solid fa-tools"></i> سهولة الصيانة</h3>
+                    <p>أنظمة الكلادينج سهلة الصيانة والتنظيف، مما يقلل من تكاليف الصيانة طويلة المدى.</p>
+                </div>
+                <div class="product-card" data-aos="fade-up" data-aos-delay="400">
+                    <h3><i class="fa-solid fa-fire"></i> مقاومة للحريق</h3>
+                    <p>أنظمة الكلادينج الحديثة مصممة لتكون مقاومة للحريق، مما يضمن سلامة المباني والمستخدمين.</p>
+                </div>
+                <div class="product-card" data-aos="fade-up" data-aos-delay="500">
+                    <h3><i class="fa-solid fa-clock"></i> سرعة التركيب</h3>
+                    <p>أنظمة الكلادينج مصممة للتركيب السريع والسهل، مما يقلل من وقت المشروع والتكاليف.</p>
+                </div>
+            </div>
+            <div style="margin:3rem 0 2rem;">
+                <h2 class="section-title" style="font-size:1.3rem;margin-bottom:1.5rem;">أنواع الكلادينج</h2>
+                <div class="quick-links" style="justify-content:flex-start;">
+                    <span class="quick-link"><i class="fa-solid fa-layer-group"></i> كلادينج ألمنيوم</span>
+                    <span class="quick-link"><i class="fa-solid fa-square"></i> كلادينج حجر</span>
+                    <span class="quick-link"><i class="fa-solid fa-cube"></i> كلادينج زجاجي</span>
+                    <span class="quick-link"><i class="fa-solid fa-gem"></i> كلادينج مركب</span>
+                </div>
+            </div>
+            <div class="doors-gallery" style="margin-top:3rem;">
+                <h2 class="section-title" style="font-size:1.3rem;margin-bottom:2rem;">نماذج من مشاريعنا</h2>
+                <div class="products-grid">
+                    <div class="product-card" data-aos="fade-up">
+                        <img src="كلادينج-الواح-البناء-الصفحة-الرئيسية-1.webp" alt="كلادينج ألمنيوم" style="height:320px;object-fit:cover;">
+                        <h3>كلادينج ألمنيوم حديث</h3>
                     </div>
-                    <div class="project-card-content">
-                        <h3><i class="fa-solid fa-window-maximize"></i> نوافذ وأبواب UPVC</h3>
-                        <p>أنظمة نوافذ وأبواب UPVC عازلة للحرارة والصوت، توفير الطاقة وحماية البيئة</p>
-                        <div class="project-stats">
-                            <span><i class="fa-solid fa-project-diagram"></i> 60+ مشروع</span>
-                            <span><i class="fa-solid fa-star"></i> 4.7/5 تقييم</span>
-                        </div>
+                    <div class="product-card" data-aos="fade-up" data-aos-delay="100">
+                        <img src="bg_header-cladding.jpg" alt="كلادينج زجاجي" style="height:320px;object-fit:cover;">
+                        <h3>كلادينج زجاجي شفاف</h3>
+                    </div>
+                    <div class="product-card" data-aos="fade-up" data-aos-delay="200">
+                        <img src="تركيب-واجهات-كلادينج-في-جده.jpg" alt="كلادينج مركب" style="height:320px;object-fit:cover;">
+                        <h3>كلادينج مركب متطور</h3>
                     </div>
                 </div>
             </div>
@@ -134,24 +117,24 @@
         <div class="container">
             <div class="stats-grid">
                 <div class="stat-item" data-aos="fade-up">
-                    <div class="stat-icon"><i class="fa-solid fa-project-diagram"></i></div>
-                    <div class="stat-number">225+</div>
-                    <div class="stat-label">مشروع مكتمل</div>
+                    <div class="stat-icon"><i class="fa-solid fa-layer-group"></i></div>
+                    <div class="stat-number">35+</div>
+                    <div class="stat-label">مشروع كلادينج</div>
                 </div>
                 <div class="stat-item" data-aos="fade-up" data-aos-delay="100">
                     <div class="stat-icon"><i class="fa-solid fa-users"></i></div>
-                    <div class="stat-number">150+</div>
+                    <div class="stat-number">60+</div>
                     <div class="stat-label">عميل راضي</div>
                 </div>
                 <div class="stat-item" data-aos="fade-up" data-aos-delay="200">
-                    <div class="stat-icon"><i class="fa-solid fa-calendar-check"></i></div>
-                    <div class="stat-number">10+</div>
-                    <div class="stat-label">سنوات خبرة</div>
-                </div>
-                <div class="stat-item" data-aos="fade-up" data-aos-delay="300">
                     <div class="stat-icon"><i class="fa-solid fa-star"></i></div>
                     <div class="stat-number">4.8</div>
                     <div class="stat-label">تقييم متوسط</div>
+                </div>
+                <div class="stat-item" data-aos="fade-up" data-aos-delay="300">
+                    <div class="stat-icon"><i class="fa-solid fa-calendar-check"></i></div>
+                    <div class="stat-number">6+</div>
+                    <div class="stat-label">سنوات خبرة</div>
                 </div>
             </div>
         </div>
@@ -206,4 +189,4 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
