--- a/index.html
+++ b/index.html
@@ -54,6 +54,52 @@
       <p data-i18n="hero_subtitle">رؤية هندسية متطورة</p>
       <a href="products.html" class="btn btn-primary" data-i18n="browse_products"><i class="fa-solid fa-arrow-left"></i> تصفح منتجاتنا</a>
     </div>
+    <!-- Start: Product Quick Cards -->
+    <div class="product-quick-cards container" style="margin-top: 1.5rem;">
+      <div class="product-cards-grid" style="display: flex; gap: 1.5rem; justify-content: center; align-items: stretch;">
+        <a href="projects-aluminum-glass.html" class="product-card"
+           title="المنيوم وزجاج"
+           style="text-align:center; text-decoration:none; background:#FFC107; border-radius:1rem; padding:1.2rem 1.5rem; box-shadow:0 2px 8px #0001; display:flex; flex-direction:column; align-items:center; min-width:120px;">
+          <div class="product-card-icon"
+               style="font-size:2.5rem; color:#fff; margin-bottom:0.5rem;">
+            <i class="fa-solid fa-building"></i>
+          </div>
+          <div class="product-card-title"
+               style="font-weight:600; color:#111;">المنيوم وزجاج</div>
+        </a>
+        <a href="projects-cladding.html" class="product-card"
+           title="كلادينج"
+           style="text-align:center; text-decoration:none; background:#FFC107; border-radius:1rem; padding:1.2rem 1.5rem; box-shadow:0 2px 8px #0001; display:flex; flex-direction:column; align-items:center; min-width:120px;">
+          <div class="product-card-icon"
+               style="font-size:2.5rem; color:#fff; margin-bottom:0.5rem;">
+            <i class="fa-solid fa-layer-group"></i>
+          </div>
+          <div class="product-card-title"
+               style="font-weight:600; color:#111;">كلادينج</div>
+        </a>
+        <a href="projects-wpc-doors.html" class="product-card"
+           title="ابواب WPC"
+           style="text-align:center; text-decoration:none; background:#FFC107; border-radius:1rem; padding:1.2rem 1.5rem; box-shadow:0 2px 8px #0001; display:flex; flex-direction:column; align-items:center; min-width:120px;">
+          <div class="product-card-icon"
+               style="font-size:2.5rem; color:#fff; margin-bottom:0.5rem;">
+            <i class="fa-solid fa-door-open"></i>
+          </div>
+          <div class="product-card-title"
+               style="font-weight:600; color:#111;">ابواب WPC</div>
+        </a>
+        <a href="projects-upvc-windows.html" class="product-card"
+           title="نوافذ وابواب UPVC"
+           style="text-align:center; text-decoration:none; background:#FFC107; border-radius:1rem; padding:1.2rem 1.5rem; box-shadow:0 2px 8px #0001; display:flex; flex-direction:column; align-items:center; min-width:120px;">
+          <div class="product-card-icon"
+               style="font-size:2.5rem; color:#fff; margin-bottom:0.5rem;">
+            <i class="fa-solid fa-window-maximize"></i>
+          </div>
+          <div class="product-card-title"
+               style="font-weight:600; color:#111;">نوافذ وابواب UPVC</div>
+        </a>
+      </div>
+    </div>
+    <!-- End: Product Quick Cards -->
     <div class="floating-elements">
       <div class="floating-element"><i class="fa-solid fa-building"></i></div>
       <div class="floating-element"><i class="fa-solid fa-cog"></i></div>
@@ -110,9 +156,9 @@
     <div class="container">
       <h2 class="section-title" data-i18n="client_testimonials">آراء العملاء</h2>
       <div class="testimonials-grid">
-        <div class="testimonial-card"><div class="testimonial-content"><div class="rating-stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div><p>"خدمة ممتازة وجودة عالية في العمل. أنصح بالتعامل معهم"</p><div class="testimonial-author"><strong>أحمد محمد</strong><span>مدير مشروع</span></div></div></div>
-        <div class="testimonial-card"><div class="testimonial-content"><div class="rating-stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div><p>"فريق محترف ومتخصص. سعر مناسب وجودة ممتازة"</p><div class="testimonial-author"><strong>سارة أحمد</strong><span>مصممة ديكور</span></div></div></div>
-        <div class="testimonial-card"><div class="testimonial-content"><div class="rating-stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div><p>"أفضل شركة في مجال الكرتن وول. أنصح الجميع"</p><div class="testimonial-author"><strong>محمد علي</strong><span>مقاول</span></div></div></div>
+        <div class="testimonial-card"><div class="testimonial-content"><div class="rating-stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div><p>"خدمة ممتازة وجودة عالية في العمل. أنصح بالتعامل معهم"</p><div class="testimonial-author"><strong>عبدالله الحسين</strong><span>مدير مشروع</span></div></div></div>
+        <div class="testimonial-card"><div class="testimonial-content"><div class="rating-stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div><p>"فريق محترف ومتخصص. سعر مناسب وجودة ممتازة"</p><div class="testimonial-author"><strong>حسام أحمد</strong><span>مصمم ديكور</span></div></div></div>
+        <div class="testimonial-card"><div class="testimonial-content"><div class="rating-stars"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div><p>" من أفضل الشركات في مجال الكرتن وول. أنصح الجميع"</p><div class="testimonial-author"><strong>محمد ياسر</strong><span>مقاول</span></div></div></div>
       </div>
     </div>
   </section>
@@ -177,17 +223,5 @@
   <button id="back-to-top" class="back-to-top" aria-label="العودة للأعلى"><i class="fa-solid fa-arrow-up"></i></button>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
-</body>
-</html>
-
-  <!-- Back to Top Button -->
-  <button id="back-to-top" class="back-to-top" aria-label="العودة للأعلى">
-    <i class="fa-solid fa-arrow-up"></i>
-  </button>
-
-  <!-- Scripts -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
-  <script src="script.js" defer></script>
 </body>
 </html>
